Added the endpoint to get logged in client details.
